comp_pro/aoj/ALDS1_4_B/first/error.txt
submit.cpp: In function ‘void insert(int)’:
submit.cpp:27:29: error: expected ‘;’ before ‘}’ token
   27 |             p_x=p_x->p_right
      |                             ^
      |                             ;
   28 |         }
      |         ~                    
submit.cpp:36:18: error: ‘struct Node’ has no member named ‘left’; did you mean ‘p_left’?
   36 |             p_y->left=p_z;
      |                  ^~~~
      |                  p_left
submit.cpp: In function ‘Node* find(Node*, int)’:
submit.cpp:45:30: error: ‘u’ was not declared in this scope
   45 |     while(p_u != p_NIL && k!=u->key){
      |                              ^
submit.cpp:48:13: error: expected ‘}’ before ‘else’
   48 |             else{
      |             ^~~~
submit.cpp:46:25: note: to match this ‘{’
   46 |         if(k < p_u->key){
      |                         ^
submit.cpp:52:5: warning: no return statement in function returning non-void [-Wreturn-type]
   52 |     }
      |     ^
submit.cpp: At global scope:
submit.cpp:53:5: error: expected unqualified-id before ‘return’
   53 |     return p_u;
      |     ^~~~~~
submit.cpp:54:1: error: expected declaration before ‘}’ token
   54 | }
      | ^
submit.cpp: In function ‘void inorder(Node*)’:
submit.cpp:60:18: error: ‘struct Node’ has no member named ‘left’; did you mean ‘p_left’?
   60 |     inorder(p_u->left);
      |                  ^~~~
      |                  p_left
submit.cpp: In function ‘int main()’:
submit.cpp:85:13: error: expected ‘,’ or ‘;’ before ‘if’
   85 |             if(t != p_NIL){
      |             ^~
submit.cpp:88:13: error: expected ‘}’ before ‘else’
   88 |             else if(com[0] == 'i'){
      |             ^~~~
submit.cpp:82:9: note: to match this ‘{’
   82 |         {
      |         ^
submit.cpp: At global scope:
submit.cpp:100:5: error: expected unqualified-id before ‘return’
  100 |     return 0;
      |     ^~~~~~
submit.cpp:101:1: error: expected declaration before ‘}’ token
  101 | }
      | ^
